# dbt-snowflake-quicksetup

./: .sqlfluff  README.md  dbt_project.yml  packages.yml  pyproject.toml
models/: customers.sql
models/example/: my_first_dbt_model.sql  my_second_dbt_model.sql
